--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,11 @@
 *.kmz
 *.zip
 *.ffs_gui
+*.tif
 References/
 0042687-200613084148143.zip
 gadm36_MEX_0_sp.rds
 sync.ffs_lock
-data/
 !data/helpers/
 figures/
+data/
